--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,14 +3,13 @@ spring:
     name: gateway-server
   cloud:
     gateway:
-      mvc:
-        routes:
-#          - id: user-service
-#            uri: lb://MEMBER-SERVICE
-#            predicates:
-#              - Path=/member-service/**
-#            filters:
-#              - StripPrefix=1
+      routes:
+        - id: trade-server
+          uri: lb://TRADE-SERVER
+          predicates:
+            - Path=/trade/**
+          filters:
+            - StripPrefix=1
 
 #eureka
 eureka:
