--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
         cors-configurations:
           '[/**]':
             allowedOrigins:
-              - 'http://localhost:3000'
+              - 'https://localhost:3000'
 #              - '*'
             allow-credentials: true
             allowedHeaders: '*'
@@ -26,24 +26,24 @@ spring:
         - id: trade-server
           uri: lb://TRADE-SERVER
           predicates:
-            - Path=/trade/**
+            - Path=api/v1/trade/**
           filters:
-            - StripPrefix=1
+            - StripPrefix=3
             - AuthorizationHeaderFilter #Token 인증 필터
         #유저 인증 서버 (Token 인증 필요 X path)
         - id: member-server
           uri: lb://MEMBER-SERVER
           predicates:
-            - Path=/member/**
+            - Path=api/v1/member/**
           filters:
-            - StripPrefix=1
+            - StripPrefix=3
         #유저 인증 서버 (Token 인증 필요 O path)
         - id: member-server
           uri: lb://MEMBER-SERVER
           predicates:
-            - Path=/member/**
+            - Path=api/v1/member/**
           filters:
-            - StripPrefix=1
+            - StripPrefix=3
             - AuthorizationHeaderFilter #Token 인증 필터
 
 #eureka
