--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
               - POST
               - DELETE
               - OPTIONS
-#            exposedHeaders: '*' #헤더 값 접근 허용
+            exposedHeaders: '*' #헤더 값 접근 허용
 
       routes:
         #매수/매도 서버 (전체 Token 인증 필요)
