Revert "Fix : CORS 처리 변경. yml에서 class관리"
This reverts commit 451316ac0147b2c462888fb9415b2fe81b2d61da.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,26 +3,26 @@ spring:
     name: gateway-server
   cloud:
     gateway:
-#      default-filters:
-#        - DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials
-#      globalcors:
-#        cors-configurations:
-#          '[/**]':
-#            allowedOrigins:
-#              - 'https://localhost:3000'
-##              - '*'
-#            allow-credentials: true
-#            allowedHeaders:
+      default-filters:
+        - DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials
+      globalcors:
+        cors-configurations:
+          '[/**]':
+            allowedOrigins:
+              - 'https://localhost:3000'
 #              - '*'
-#            allowedMethods:
-#              - PUT
-#              - GET
-#              - POST
-#              - DELETE
-#              - OPTIONS
-#            maxAge: 3600
-#            exposedHeaders:
-#              - 'Authorization'
+            allow-credentials: true
+            allowedHeaders:
+              - '*'
+            allowedMethods:
+              - PUT
+              - GET
+              - POST
+              - DELETE
+              - OPTIONS
+            maxAge: 3600
+            exposedHeaders:
+              - 'Authorization'
 
       routes:
         #매수/매도 서버 (전체 Token 인증 필요)
