--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -64,10 +64,10 @@ springdoc:
     operations-sorter: alpha
     config-url: /v3/api-docs/swagger-config
     urls:
-      - url: http://trade-server/api-docs/json
-        name: Trade
-#      - url: http://trade-server/api-docs/json #todo : service 추가 될때마다 swagger에 붙여 줘야됨.
+#      - url: http://localhost:59061/api-docs/json #localhost test - OK
 #        name: Trade
+      - url: http://trade-server/api-docs/json #todo : service 추가 될때마다 swagger에 붙여 줘야됨.
+        name: Trade
 #      - url: http://trade-server/api-docs/json
 #        name: Trade
 #      - url: http://trade-server/api-docs/json
