--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
               - 'https://localhost:3000'
               - 'http://localhost:3000'
               - 'http://10.10.10.72:3000'
-#              - '*'
+            #              - '*'
             allow-credentials: true
             allowedHeaders:
               - '*'
@@ -43,51 +43,13 @@ spring:
           filters:
             - StripPrefix=3
         #유저 인증 서버 (Token 인증 필요 O path)
-#        - id: member-server
-#          uri: lb://MEMBER-SERVER
-#          predicates:
-#            - Path=/api/v1/member/**
-#          filters:
-#            - StripPrefix=3
-#            - AuthorizationHeaderFilter #Token 인증 필터
-        - id: trade-service-swagger
-          uri: lb://TRADE-SERVER
+        - id: member-server
+          uri: lb://MEMBER-SERVER
           predicates:
-            - Path=/trade-server/api-docs
-            - StripPrefix=1
-springdoc:
-  swagger-ui:
-    urls[0]:
-      name: 회원 서비스
-      url: /trade-server/api-docs
-
-    use-root-path: true
-
-#springdoc:
-#  default-consumes-media-type: application/json;charset=UTF-8
-#  default-produces-media-type: application/json;charset=UTF-8
-#  enable-native-support: true
-#  api-docs:
-#    enabled: true
-#  swagger-ui:
-#    enabled: true
-#    path: /swagger-ui.html
-#    tags-sorter: alpha
-#    operations-sorter: alpha
-#    config-url: /v3/api-docs/swagger-config
-#    urls:
-##      - url: http://localhost:59061/api-docs/json #localhost test - OK
-##        name: Trade
-#      - url: http://trade-server/api-docs/json #todo : service 추가 될때마다 swagger에 붙여 줘야됨.
-#        name: Trade
-##      - url: http://trade-server/api-docs/json
-##        name: Trade
-##      - url: http://trade-server/api-docs/json
-##        name: Trade
-##      - url: http://trade-server/api-docs/json
-##        name: Trade
-#  cache:
-#    disabled: true
+            - Path=/api/v1/member/**
+          filters:
+            - StripPrefix=3
+            - AuthorizationHeaderFilter #Token 인증 필터
 
 #eureka
 eureka:
