--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -59,7 +59,7 @@ spring:
             - StripPrefix=1
 springdoc:
   default-consumes-media-type: application/json;charset=UTF-8
-  default-produces-media-type: application/json;charset=UTF-8h
+  default-produces-media-type: application/json;charset=UTF-8
   swagger-ui:
     urls[0]:
       name: 매수매도 서비스
