Fix : 알림서버 Token 무조건 인증이 필요하도록 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -79,6 +79,7 @@ spring:
             - Path=/api/v1/notification/**
           filters:
             - StripPrefix=3
+            - AuthorizationHeaderFilter #Token 인증 필터
 
 
         #매수/매도 swagger
