Fix : Patch Method 추가 처리.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,7 @@ spring:
               - GET
               - POST
               - DELETE
+              - PATCH
               - OPTIONS
             maxAge: 3600
             exposedHeaders:
